added cover letter

--- a/wlln.html
+++ b/wlln.html
@@ -44,47 +44,45 @@
         </button>
       </p>
       <div class="collapse" id="cover">
-        <div class="card card-body">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at sapien ante. Quisque vitae tortor metus.
-          Curabitur ipsum sem, fringilla eget varius non, varius eu est. Phasellus condimentum, risus a semper lobortis,
-          ante ex efficitur ipsum, et maximus velit leo id elit. Duis arcu dolor, maximus sit amet neque at, tempus
-          imperdiet ex. Integer non arcu quis dui convallis semper. Nullam pretium, magna eu varius commodo, lacus nunc
-          vestibulum urna, a luctus diam leo lacinia nunc. Integer vulputate mi id mauris tincidunt, non aliquet dolor
-          eleifend. Nam dignissim, nunc et euismod vehicula, ligula massa hendrerit nisi, eget imperdiet neque lacus vel
-          turpis. Praesent diam velit, bibendum in interdum in, posuere ac mi. Nam nec fermentum quam, id volutpat
-          turpis. Vivamus aliquet quam lorem, malesuada tristique arcu maximus sit amet. Duis id pulvinar orci. Nulla
-          sed aliquam quam, id faucibus lectus. Ut consectetur sollicitudin nibh, ut eleifend ex.
-          <br /><br /><br />
-          Nam elementum mauris quis tincidunt accumsan. Praesent condimentum, ex eget bibendum venenatis, quam enim
-          fermentum massa, ut commodo odio ex non elit. Phasellus luctus rutrum ipsum, sed suscipit leo rutrum et. Nunc
-          non efficitur tortor, vitae maximus nibh. Ut metus nisl, lobortis vitae hendrerit euismod, sollicitudin et
-          nulla. Etiam tellus dui, ornare nec accumsan in, feugiat nec ligula. Pellentesque ac est gravida, euismod
-          massa eget, laoreet nisi. Aenean cursus dolor sed varius sollicitudin. In varius, diam at venenatis efficitur,
-          mi libero gravida nibh, ac varius diam dolor in nisi. In malesuada porta lorem at luctus. Integer volutpat
-          nunc vel erat convallis, non pellentesque lectus convallis. Proin eu nulla eget mi bibendum ornare. Proin
-          facilisis magna metus. Morbi efficitur tincidunt laoreet.
-          <br /><br /><br />
-          Integer porttitor, urna sit amet varius convallis, ex leo elementum lacus, sed egestas felis orci sit amet
-          elit. Maecenas nec elementum lorem. Aliquam erat volutpat. Morbi pretium vulputate imperdiet. Nullam quis odio
-          quis arcu iaculis cursus ac et nibh. Aliquam erat volutpat. Proin ut dui rutrum mi elementum tincidunt quis
-          vitae sapien. Cras luctus orci sit amet leo mollis, tempus vulputate dui rhoncus. Aliquam a pulvinar velit,
-          eget bibendum nisi. Curabitur mauris justo, rhoncus non malesuada sit amet, pretium viverra ligula. Aliquam
-          elit sapien, ultricies non quam eget, aliquet ullamcorper quam.
-          <br /><br /><br />
-          Praesent eu posuere ante. Nulla sed tellus ante. Suspendisse potenti. Nullam vulputate elit ex, sed bibendum
-          erat vestibulum vitae. Fusce quis arcu mattis, commodo nisl ac, scelerisque purus. Mauris rhoncus euismod
-          massa vel volutpat. Vestibulum iaculis ac mauris ut pharetra. Morbi semper, enim a auctor lacinia, nisl sapien
-          hendrerit turpis, nec fringilla nunc erat ac enim. Vestibulum nec elit eget neque convallis imperdiet non ut
-          purus. In ullamcorper sem at luctus viverra. Maecenas at consequat dolor, sed fermentum nibh. Curabitur ut
-          erat quis ex facilisis interdum in in enim. Nam pellentesque egestas condimentum. Cras tincidunt varius felis,
-          id facilisis lorem pharetra at. Quisque posuere gravida leo.
-          <br /><br /><br />
-          Suspendisse non venenatis leo, sed dignissim diam. Sed eget orci non odio elementum sagittis. Donec tincidunt
-          efficitur ornare. Donec molestie quam lectus, non dictum nisl molestie et. Praesent consequat aliquam dui,
-          eget varius eros rutrum id. Nunc hendrerit interdum odio a bibendum. Proin finibus arcu id bibendum
-          vestibulum. Quisque dapibus augue in neque viverra blandit. Vivamus accumsan, augue at aliquam egestas, risus
-          leo sollicitudin magna, a varius augue sapien ut nisi. Quisque nec nulla posuere, faucibus orci sed, congue
-          augue.
+        <div class="card card-body" style="text-align: left;">
+          <h1 style="text-align: center;">Cover Letter</h1>
+          Language has always been a vital part of who I am and my story. However, I didn’t truly realize the impact
+          that language has had in my life until I sat down to write this essay. This essay challenged me to think
+          deeper about my own language and literacy journey. I am grateful to have had the opportunity to reflect on
+          this journey.
+          <br /><br />
+          When I wrote this essay, I intended my audience to be other immigrants, specifically children of immigrants
+          who must had experience what I have experienced. I wanted my audience to know that they were not alone in
+          their struggles, that it’s okay if they felt those same feelings of fear and sadness I felt during the first
+          few years in America. So, in my essay, I delved deeper into my feelings, from what I was feeling when I
+          entered my first classroom in America to what I was feeling when I chose my book for silent reading time. By
+          describing in depth my feelings in these moments, I could take my audience on a trip down memory lane, when
+          they felt (or maybe still do feel) this type of way. In addition, I knew a lot of my classmates were going to
+          be the ones reading my essay and many of them could relate to my story, so I felt it was important to tell it.
+          On the other hand, I would hope that regardless of a personal connection to my narrative, the audience takes
+          something away from story, about the struggles that everyday immigrants endure.
+          <br /><br />
+          In writing this essay, some of the most meaningful insights I have gained are that the more description and
+          dialogue, the better. I found myself thoroughly enjoying providing these descriptions and revisiting these
+          memories. I have come to realize how much both my writing and reading skills have improved. In writing this
+          narrative, I have started to become more vulnerable in my writing. This essay helped me greatly improve the
+          description in my writing. Rhetorical situation, purpose, and audience have most impacted my learning and
+          writing practices. For example, in writing this essay, I have become very aware of these tools. As I was
+          writing it, I pictured the triangular diagram we completed in class. I knew that I was utilizing a lot of
+          pathos in my own writing by providing extensive details of my feelings and actions. In addition, I wanted to
+          make sure that my essay was easy to read, like Amy Tan mentions in “Mother Tongue.”
+          <br /><br />
+          This assignment has helped me achieve the following Course Learning Outcomes: “develop strategies for reading,
+          drafting, collaborating, revising, and editing” and “engage in the collaborative and social aspects of writing
+          processes.” During the process of completing this assignment, I, along with my classmates, spent a great deal
+          of time revising and editing our essays. The peer reviews helped me develop strategies for reading, drafting,
+          collaborating, revising, and editing. Additionally, during the in-class peer review sessions, I began to
+          engage in the collaborative and social aspects of the writing process. In discussing my essay with my peers, I
+          developed a friendship and trust with them. Many of us found that we connected with each other’s pieces of
+          writing. Moreover, the spoken language and literacy narrative assignment helped me get to know my classmates
+          better. Overall, writing my language and literacy narrative was a great learning experience.
+
+
         </div>
       </div>
       <br /><br />
